# ChangeLog for Gentoo System Intialization core utilities.
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2
# $Header$

  17 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    parse.c: Fix write_legacy_stage3() to quote the mtime in its output.

  17 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    misc.c, parse.c: Change type of length from int to size_t to avoid warnings
                     when compiled for darwin.

  17 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    misc.c, misc.h: Add strndup() instead of relying on glibc's implementation
                    (should fix some issues on bsd and darwin).
    depend.c, simple-regex.c: Do not define _GNU_SOURCE, but rather use our
                              strndup() from misc.h.
    parse.c: Do not define _GNU_SOURCE, but rather use our strndup() from
             misc.h.  Also change all usage of basename() to conform to POSIX,
             and not use the GNU variants.

  16 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    depscan.c: Add uid check and quit if user is not root.

  16 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    depend.c, depend.h: Change service_type_names declaration in depend.h to
                        extern and move the definition to depend.c to avoid
                        warnings.

  16 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    Add README.

  16 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    depscan.c: Add delete_var_dirs() to delete volatile directories in svcdir.
               Change 'char *' declarations for create_directory() and
               create_var_dirs() to 'const char*'.
    misc.h, misc.c: Add rmtree() function.  Fix ls_dir() not to include '.'
                    and '..' in its listing.  Fix segfault in ls_dir() if the
                    file list is empty.

  16 Feb 2005; Martin Schlemmer <azarah@gentoo.org>:

    Add Header tags to all source files and Makefile.
